force-app/main/default/objects/Reference_Checks__c/Reference_Checks__c.object-meta.xml
<CustomObject>
    <label>Reference Checks</label>
    <nameField>
        <label>Reference Checks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>