force-app/main/default/objects/Reference_Checks__c/fields/API_Name_of_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>API_Name_of_Target_Object__c</fullName>
    <label>API Name of Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>