force-app/main/default/objects/Reference_Checks__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completeness Review</fullName>
            </value>
            <value>
                <fullName>Document Review</fullName>
            </value>
            <value>
                <fullName>Closeout Review</fullName>
            </value>
            <value>
                <fullName>Inspection Review</fullName>
            </value>
            <value>
                <fullName>Bluesheet Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>