force-app/main/default/objects/Reference_Checks__c/fields/Source_Target_Field_Mappings_JSON__c.field-meta.xml
<CustomField>
    <fullName>Source_Target_Field_Mappings_JSON__c</fullName>
    <inlineHelpText>API names of the fields coming from the source object (likely Reference Checks Details) that will be mapped to the fields on the child object (likely Checklist Details). Follow the format of the JSON string:</inlineHelpText>
    <label>Source Target Field Mappings JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>