force-app/main/default/objects/Reference_Checks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Checklist_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>